--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1565,7 +1565,7 @@ a {
 	position: absolute;
 	top: 0;
 	left: 50%;
-	background: url(../img/presentation-bg.png) 0 0/100% 100% no-repeat
+	background: url(../img/presentation-bg.jpg) 0 0/100% 100% no-repeat
 }
 
 .presentation-block__main {
