--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5467,3 +5467,43 @@ a {
   .box-container2 .box2 .thumbnail2:hover img {
     transform: scale(1.1);
   }
+
+
+  #prebutton {
+	border: 4px solid black;
+	padding: 16px 24px;
+	position: relative;
+	background-color: transparent;
+  }
+  #prebutton span {
+	font-size: 24px;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-family: "Roboto", sans-serif;
+	letter-spacing: 5px;
+  }
+  #prebutton:after {
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	height: 100%;
+	width: 100%;
+	background-color: #ffea00;
+	content: "";
+	z-index: -1;
+	transition: transform 0.2s ease-in, width 0.2s ease-out 0.2s;
+  }
+  #prebutton:hover:after {
+	transform: translate(-10px, -10px);
+	width: calc(100% - 10px);
+  }
+
+  #prebutton:active:after {
+	width: 100%;
+  }
+
+  .presale-button{
+	display: grid;
+  	place-content: center;
+  	height: 100vh;
+  }
